--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   <input type="checkbox" name="adjective" id="adjective"> Add an adjective
   <input type="checkbox" name="verb" id="verb"> Add a verb
   <input type="checkbox" name="noun" id="noun">add a noun
+
+  <input type="submit" value="GENERATE!" id="generate">
+
   <h4 id="generatedName">PlaceHolder</h4>
 
+  <script src="wordList.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
