creates list from names generated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <input type="submit" value="GENERATE!" id="generate">
 
-  <h4 id="generatedName"><span id="first-word">Band</span> <span id="second-word">Name</span></h4>
+  <h4 id="generatedName"><span id="first-word">Band</span> <span id="second-word">Name</span></h4><br>
+  <div id="list"></div>
 
   <script src="wordList.js"></script>
   <script src="script.js"></script>
